@@ -1,62 +1,61 @@
 package vlaship.backoffice.facade;
 
-import vlaship.backoffice.dto.IDto;
-import vlaship.backoffice.exception.BadRequestException;
-import vlaship.backoffice.model.IModel;
-import vlaship.backoffice.facade.converter.IConverter;
-import vlaship.backoffice.service.IService;
+import org.springframework.lang.NonNull;
+import vlaship.backoffice.dto.Dto;
+import vlaship.backoffice.model.Model;
+import vlaship.backoffice.mapper.BackOfficeMapper;
+import vlaship.backoffice.service.BackOfficeService;
 import org.springframework.data.domain.Pageable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public abstract class AbstractFacade<M extends IModel, D extends IDto> implements Facade<M, D> {
+public abstract class AbstractFacade<M extends Model, D extends Dto> implements Facade<M, D> {
 
-    private final IConverter<M, D> converter;
-    private final IService<M> service;
+    private final BackOfficeMapper<M, D> converter;
 
-    public M get(final Integer id) {
+    private final BackOfficeService<M> service;
+
+    @NonNull
+    public M get(@NonNull final Long id) {
         return service.find(id);
     }
 
-    private M get(final D d) {
-        if (d.getId() == null) {
-            throw new BadRequestException(d.getClass().getSimpleName(), d);
-        }
-        return get(d.getId());
+    @NonNull
+    private M get(@NonNull final D d) {
+        return get(d.id());
     }
 
+    @NonNull
     @Override
-    public D update(final D dto) {
-        M m = converter.convert(dto, get(dto));
+    public D update(@NonNull final D dto) {
+        M m = converter.merge(dto, get(dto));
         final M saved = service.save(m);
-        return converter.convert(saved);
+        return converter.map(saved);
     }
 
+    @NonNull
     @Override
-    public void delete(final Integer id) {
+    public void delete(@NonNull final Long id) {
         final M m = get(id);
         checkForDelete(m);
         service.delete(m);
     }
 
+    @NonNull
     @Override
-    public D find(final Integer id) {
-        return converter.convert(service.find(id));
+    public D find(@NonNull final Long id) {
+        return converter.map(service.find(id));
     }
 
+    @NonNull
     @Override
-    public List<D> findAll(final Pageable pageable) {
-        return service.findAll(pageable)
-                .stream()
-                .map(converter::convert)
-                .collect(Collectors.toList());
+    public List<D> findAll(@NonNull final Pageable pageable) {
+        return service.findAll(pageable).stream().map(converter::map).toList();
     }
 
     protected abstract void checkForDelete(M m);
 
-    public AbstractFacade(final IConverter<M, D> converter,
-                          final IService<M> service) {
+    protected AbstractFacade(final BackOfficeMapper<M, D> converter, final BackOfficeService<M> service) {
         this.converter = converter;
         this.service = service;
     }
