@@ -1,34 +1,34 @@
 package vlaship.backoffice.facade.impl;
 
+import org.springframework.lang.NonNull;
 import vlaship.backoffice.dto.CategoryDto;
 import vlaship.backoffice.exception.DeleteException;
 import vlaship.backoffice.model.Category;
 import vlaship.backoffice.facade.AbstractFacade;
-import vlaship.backoffice.facade.converter.impl.CategoryConverter;
+import vlaship.backoffice.mapper.impl.CategoryMapper;
 import vlaship.backoffice.service.impl.CategoryService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class CategoryFacade extends AbstractFacade<Category, CategoryDto> {
 
     private final CategoryService categoryService;
-    private final CategoryConverter categoryConverter;
+    private final CategoryMapper categoryConverter;
 
-    public CategoryDto create(final CategoryDto categoryDto) {
-        final Category converted = categoryConverter.convert(categoryDto);
+    @NonNull
+    public CategoryDto create(@NonNull final CategoryDto categoryDto) {
+        final Category converted = categoryConverter.map(categoryDto);
         final Category saved = categoryService.save(converted);
-        return categoryConverter.convert(saved);
+        return categoryConverter.map(saved);
     }
 
     @Override
-    protected void checkForDelete(final Category category) {
+    protected void checkForDelete(@NonNull final Category category) {
         if (!category.getSubCategories().isEmpty()) {
             throw new DeleteException(category + ", because it has sub categories");
         }
@@ -37,15 +37,18 @@ public class CategoryFacade extends AbstractFacade<Category, CategoryDto> {
         }
     }
 
-    public List<CategoryDto> findAll(final Pageable pageable, final String name) {
-        return categoryService.findAll(pageable, name).stream()
-                .map(categoryConverter::convert)
-                .collect(Collectors.toList());
+    @NonNull
+    public List<CategoryDto> findAll(
+            @NonNull final String name,
+            @NonNull final Pageable pageable
+    ) {
+        return categoryService.findAll(name, pageable)
+                .stream()
+                .map(categoryConverter::map)
+                .toList();
     }
 
-    @Autowired
-    public CategoryFacade(final CategoryConverter categoryConverter,
-                          final CategoryService categoryService) {
+    public CategoryFacade(final CategoryMapper categoryConverter, final CategoryService categoryService) {
         super(categoryConverter, categoryService);
         this.categoryService = categoryService;
         this.categoryConverter = categoryConverter;
