@@ -1,5 +1,6 @@
 package vlaship.backoffice.facade.impl;
 
+import org.springframework.lang.NonNull;
 import vlaship.backoffice.dto.PriceDto;
 import vlaship.backoffice.dto.ProductDto;
 import vlaship.backoffice.dto.ProductCreationDto;
@@ -8,75 +9,98 @@ import vlaship.backoffice.model.Category;
 import vlaship.backoffice.model.Price;
 import vlaship.backoffice.model.Product;
 import vlaship.backoffice.facade.AbstractFacade;
-import vlaship.backoffice.facade.converter.impl.PriceConverter;
-import vlaship.backoffice.facade.converter.impl.ProductConverter;
+import vlaship.backoffice.mapper.impl.PriceMapper;
+import vlaship.backoffice.mapper.impl.ProductMapper;
 import vlaship.backoffice.service.impl.PriceService;
 import vlaship.backoffice.service.impl.ProductService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class ProductFacade extends AbstractFacade<Product, ProductDto> {
 
     private final CategoryFacade categoryFacade;
-    private final ProductConverter productConverter;
+    private final ProductMapper productConverter;
     private final ProductService productService;
-    private final PriceConverter priceConverter;
+    private final PriceMapper priceConverter;
     private final PriceService priceService;
 
-    public List<ProductDto> findAll(final Pageable pageable, final Integer categoryId) {
-        return productService.findAll(pageable, categoryFacade.get(categoryId)).stream()
-                .map(productConverter::convert)
-                .collect(Collectors.toList());
+    @NonNull
+    public List<ProductDto> findAll(
+            @NonNull final Long categoryId,
+            @NonNull final Pageable pageable
+    ) {
+        return productService.findAll(List.of(categoryFacade.get(categoryId)), pageable).stream()
+                .map(productConverter::map)
+                .toList();
     }
 
-    public List<ProductDto> findAll(final Pageable pageable, final String name) {
-        return productService.findAll(pageable, name).stream()
-                .map(productConverter::convert)
-                .collect(Collectors.toList());
+    @NonNull
+    public List<ProductDto> findAll(
+            @NonNull final String name,
+            @NonNull final Pageable pageable
+    ) {
+        return productService.findAll(name, pageable).stream()
+                .map(productConverter::map)
+                .toList();
     }
 
-    public List<ProductDto> findAll(final Pageable pageable, final PriceDto priceDto) {
-        return productService.findAll(pageable, priceDto.getAmount(), priceDto.getCurrency()).stream()
-                .map(productConverter::convert)
-                .collect(Collectors.toList());
+    @NonNull
+    public List<ProductDto> findAll(
+            @NonNull final PriceDto priceDto,
+            @NonNull final Pageable pageable
+    ) {
+        return productService.findAll(priceDto.amount(), priceDto.currency(), pageable).stream()
+                .map(productConverter::map)
+                .toList();
     }
 
-    public ProductDto create(final ProductCreationDto productCreationDto) {
-        final Category category = categoryFacade.get(productCreationDto.getCategoryId());
-        final Product converted = productConverter.convert(productCreationDto, category);
+    @NonNull
+    public ProductDto create(@NonNull final ProductCreationDto productCreationDto) {
+        final Category category = categoryFacade.get(productCreationDto.categoryId());
+        final Product converted = productConverter.map(productCreationDto, category);
 
         final Product saved = productService.save(converted);
-        return productConverter.convert(saved);
+        return productConverter.map(saved);
     }
 
-    public ProductDto add(final PriceDto priceDto, final Integer productId) {
+    @NonNull
+    public ProductDto add(
+            @NonNull final PriceDto priceDto,
+            @NonNull final Long productId
+    ) {
         final Product found = get(productId);
-        final Price price = priceConverter.convert(priceDto);
+        final Price price = priceConverter.map(priceDto);
 
         found.getPrices().add(price);
         price.setProduct(found);
         final Product saved = productService.save(found);
-        return productConverter.convert(saved);
+        return productConverter.map(saved);
     }
 
-    public ProductDto add(final Integer categoryId, final Integer productId) {
+    @NonNull
+    public ProductDto add(
+            @NonNull final Long categoryId,
+            @NonNull final Long productId
+    ) {
         final Category category = categoryFacade.get(categoryId);
         final Product found = get(productId);
 
         found.getCategories().add(category);
 
         final Product saved = productService.save(found);
-        return productConverter.convert(saved);
+        return productConverter.map(saved);
     }
 
-    public ProductDto removeCategory(final Integer categoryId, final Integer productId) {
+    @NonNull
+    public ProductDto removeCategory(
+            @NonNull final Long categoryId,
+            @NonNull final Long productId
+    ) {
         final Product found = get(productId);
 
         if (found.getCategories().size() < 2) {
@@ -87,10 +111,14 @@ public class ProductFacade extends AbstractFacade<Product, ProductDto> {
         found.getCategories().remove(category);
 
         final Product saved = productService.save(found);
-        return productConverter.convert(saved);
+        return productConverter.map(saved);
     }
 
-    public ProductDto removePrice(final Integer priceId, final Integer productId) {
+    @NonNull
+    public ProductDto removePrice(
+            @NonNull final Long priceId,
+            @NonNull final Long productId
+    ) {
         final Product found = get(productId);
 
         if (found.getPrices().size() < 2) {
@@ -101,15 +129,21 @@ public class ProductFacade extends AbstractFacade<Product, ProductDto> {
         found.getPrices().remove(price);
 
         final Product saved = productService.save(found);
-        return productConverter.convert(saved);
+        return productConverter.map(saved);
     }
 
-    @Autowired
-    public ProductFacade(final ProductService productService,
-                         final CategoryFacade categoryFacade,
-                         final ProductConverter productConverter,
-                         final PriceConverter priceConverter,
-                         final PriceService priceService) {
+    @Override
+    protected void checkForDelete(@NonNull final Product product) {
+        throw new IllegalStateException();
+    }
+
+    public ProductFacade(
+            final ProductService productService,
+            final CategoryFacade categoryFacade,
+            final ProductMapper productConverter,
+            final PriceMapper priceConverter,
+            final PriceService priceService
+    ) {
         super(productConverter, productService);
         this.productService = productService;
         this.categoryFacade = categoryFacade;
@@ -118,8 +152,4 @@ public class ProductFacade extends AbstractFacade<Product, ProductDto> {
         this.priceService = priceService;
     }
 
-    @Override
-    protected void checkForDelete(final Product product) {
-
-    }
 }
